# paisa

./: .gitignore  2026-06-19_21-12-57_Claude_Chat_AI-powered_stock_market_harness_with_live_trading_indicators.md  PROJECT_STATUS.md  README.md  automated_intraday_india_plan.md  paisa.toml  pyproject.toml
.cursor/rules/: paisa-trader-invariants.mdc
StockSharp/Algo.Analytics/: Algo.Analytics.csproj
StockSharp/Samples/: README.md
data/processed/: INFY.NS__3mo__1d.parquet  INFY.NS__5d__5m.parquet  INFY.NS__60d__1d.parquet  RELIANCE.NS__3mo__1d.parquet  RELIANCE.NS__5d__5m.parquet  RELIANCE.NS__60d__1d.parquet  TCS.NS__3mo__1d.parquet  TCS.NS__5d__5m.parquet  TCS.NS__60d__1d.parquet
docs/: PAISA_MASTER.md  quant_source_mapping.md
reports/backtest_ma-cross_20260619_215138/: RELIANCE_NS_equity.csv  RELIANCE_NS_fills.csv  report.md
reports/backtest_ma-cross_20260619_215657/: RELIANCE_NS_fills.csv
reports/backtest_ma-cross_20260619_221256/: summary.csv
reports/backtest_ma-cross_20260619_221517/: RELIANCE_NS_equity.csv
reports/backtest_ma-cross_20260619_222320/: shadow.json
reports/backtest_ma-cross_20260619_223050/: INFY_NS_fills.csv  report.md  shadow.json
reports/backtest_ma-cross_20260619_223239/: INFY_NS_equity.csv  shadow.json
src/paisa_trader/: __init__.py  ai_session.py  ai_web_server.py  arima_model.py  backtest.py  bridge.py  broker.py  calibration.py  cli.py  config.py  dashboard_app.py  data.py  indicators.py  intelligence.py  live_engine.py  live_trade.py  live_web_app.py  ml_models.py  nse.py  replay.py  report.py  shadow.py  (+6 more)
tests/: test_ai_harness.py  test_backtest.py  test_bridge.py  test_broker.py  test_calibration.py  test_data.py  test_indicators.py  test_intelligence.py  test_live_engine.py  test_live_trade.py  test_ml_models.py  test_nse.py  test_replay.py  test_sentiment.py  test_shadow.py  test_snapshot.py  test_trade_stats.py
(+33 files in other folders)
