[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paisa-trader"
version = "0.2.0"
description = "No-demat India intraday research harness using Upstox, NSE reports, ML signals, and a simulated broker."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=2.0",
  "pandas>=2.2",
  "requests>=2.32",
  "upstox-python-sdk>=2.0",
  "pyarrow>=16.0",
  "tabulate>=0.9",
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "xgboost>=2.0",
  "lightgbm>=4.3",
  "scikit-learn>=1.4",
  "statsmodels>=0.14",
  "joblib>=1.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
dashboard = [
  "streamlit>=1.40",
]

[project.scripts]
paisa = "paisa_trader.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"paisa_trader" = ["web_static/*", "static/ai_dashboard/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
